--- a/ProjetoFinal/cabecalho/index.html
+++ b/ProjetoFinal/cabecalho/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minha Estante de Livros</title>
+    <link rel="stylesheet" href="/estilo/style.css">
+    <link rel="stylesheet" href="/estilo/bootstrap.css">
+</head>
+<body>
 
+    <header class="page-header">
+        <h1>Minha Estante</h1>
+    </header>
+
+    <main class="container">
+        <section class="search-container">
+            <form id="searchForm" role="search">
+                <input type="search" id="search" placeholder="Pesquise na sua estante...">
+            </form>
+            <a href="/cabecalho/formulario.html" class="btn-primary">Cadastrar Novo Livro</a>
+        </section>
+
+        <div id="api-search-results"></div>
+
+        <div class="content-split">
+            <aside class="title-list-container">
+                <h2>Títulos na Estante</h2>
+                <ul id="titleList"></ul>
+            </aside>
+            
+            <section class="book-grid-container">
+                <h2>Coleção</h2>
+                <div id="lista-livros" class="book-grid">
+                    </div>
+            </section>
+        </div>
+    </main>
+
+    <script type="module" src="/acao/aplicativo.js"></script>
+</body>
+</html>
